name:                erlang
version:             1.6.0
synopsis:            Erlang Binary Term Format for Haskell
description:
  Provides all encoding and decoding for the Erlang Binary Term Format
  (as defined at http://erlang.org/doc/apps/erts/erl_ext_dist.html)
  in a single Haskell cabal package.
homepage:            https://github.com/okeuday/erlang_hs
license:             BSD4
license-file:        LICENSE
author:              Michael Truog
maintainer:          mjtruog@gmail.com
copyright:           2017 Michael Truog
category:            Foreign
stability:           provisional
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
extra-source-files:  README.markdown

library
  hs-source-dirs:      src
  exposed-modules:     Foreign.Erlang
                     , Foreign.Erlang.Pid
                     , Foreign.Erlang.Port
                     , Foreign.Erlang.Reference
                     , Foreign.Erlang.Function
  ghc-options:         -Wall -Werror -funbox-strict-fields
  build-depends:       base >= 4.5.0
                     , binary >= 0.8.4.0
                     , bytestring >= 0.10.4
                     , containers
                     , zlib
  default-language:    Haskell2010

Test-Suite test-erlang
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base
                     , bytestring
                     , erlang
                     , test-framework
                     , test-framework-hunit
                     , zlib
                     , HUnit
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/okeuday/erlang_hs.git
